fixed z-index for tooltips

--- a/ui/styles.css
+++ b/ui/styles.css
@@ -679,6 +679,7 @@ input:checked + .slider:before {
   opacity: 1;
   transition-duration: 0.2s;
   transition-delay: 1s;
+  z-index: 15;
 }
 
 .vtm20.sheet span.item-tooltip > * {
